--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=springboot-aws-rds
+spring.datasource.url = jdbc:mysql://manishdb.cbi4u6y2e3ie.ap-south-1.rds.amazonaws.com:3306/manishbook
+spring.datasource.username = root
+spring.datasource.password = root1234
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+server.port=5000
+spring.jpa.properties.max_allowed_packet=2000
